--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,9 +25,11 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:fontFamily="@font/press_start_2p"
-        android:hint="Escribe tu Email"
+        android:hint="@string/hint_email"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColor="@android:color/white"
+        android:textColorHint="#311B92"
         android:textColorLink="@android:color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
@@ -41,9 +43,11 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:fontFamily="@font/press_start_2p"
-        android:hint="Escribe tu Clave"
+        android:hint="@string/hint_clave"
         android:inputType="numberPassword"
+        android:minHeight="48dp"
         android:textColor="@android:color/white"
+        android:textColorHint="#311B92"
         android:textColorLink="@android:color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
@@ -57,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/pixel"
-        android:text="Recordarme"
+        android:text="@string/text_recordarme"
         android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
         app:layout_constraintStart_toStartOf="@+id/editTextPassword"
@@ -68,9 +72,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/pixel"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:text="Iniciar juego"
+        android:fontFamily="@font/pixel"
+        android:text="@string/text_iniciar_juego"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="@+id/checkBoxRecordarme"
         app:layout_constraintStart_toStartOf="@+id/checkBoxRecordarme"
@@ -81,9 +85,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/pixel"
         android:backgroundTint="@color/colorPrimaryLight"
-        android:text="Nuevo Usuario"
+        android:fontFamily="@font/pixel"
+        android:text="@string/text_nuevo_usuario"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
         app:layout_constraintStart_toStartOf="@+id/buttonLogin"
